--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">VR Compatibility Checker</string>
+    <string name="success_message">Congratulations! Your device is compatible</string>
+    <string name="fail_message">Oops! Your device is not compatible</string>
 </resources>
