--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">VR Compatibility Checker</string>
-    <string name="success_message">Congratulations! Your device is compatible</string>
-    <string name="fail_message">Oops! Your device is not compatible</string>
+    <string name="msg_success">Congratulations! Your device is compatible</string>
+    <string name="msg_fail">Oops! Your device is not compatible</string>
     <string name="description_result_icon">Result icon</string>
+    <string name="the_result_of_the_item">The result of the item</string>
 </resources>
