--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="msg_fail">Oops! Your device is not compatible</string>
     <string name="description_result_icon">Result icon</string>
     <string name="the_result_of_the_item">The result of the item</string>
+    <string name="accelerometer">Accelerometer</string>
+    <string name="compass">Compass</string>
+    <string name="gyroscope">Gyroscope</string>
+    <string name="screen_size">Screen Size</string>
+    <string name="ram">RAM</string>
+    <string name="android_version">Android Version</string>
+    <string name="the_icon_of_the_item">The icon of the item</string>
 </resources>
